--- a/ecommerce/Gemfile
+++ b/ecommerce/Gemfile
@@ -11,6 +11,9 @@ gem "jquery-rails"
 gem "turbolinks", "~> 5"
 gem "jbuilder", "~> 2.5"
 gem "font-awesome-rails"
+gem "cancancan"
+gem "config"
+gem "will_paginate", "3.1.0"
 
 group :development, :test do
   gem "byebug", platform: :mri
