--- a/ecommerce/Gemfile
+++ b/ecommerce/Gemfile
@@ -16,6 +16,8 @@ gem "config"
 gem "will_paginate", "3.1.0"
 gem "carrierwave", "~> 0.10.0"
 gem "mini_magick", "~> 4.3"
+gem "ransack"
+gem "simple_form"
 
 group :development, :test do
   gem "byebug", platform: :mri
