--- a/ecommerce/Gemfile
+++ b/ecommerce/Gemfile
@@ -14,6 +14,8 @@ gem "font-awesome-rails"
 gem "cancancan"
 gem "config"
 gem "will_paginate", "3.1.0"
+gem "carrierwave", "~> 0.10.0"
+gem "mini_magick", "~> 4.3"
 
 group :development, :test do
   gem "byebug", platform: :mri
