--- a/ecommerce/Gemfile
+++ b/ecommerce/Gemfile
@@ -18,6 +18,7 @@ gem "carrierwave", "~> 0.10.0"
 gem "mini_magick", "~> 4.3"
 gem "ransack"
 gem "simple_form"
+gem "social-share-button"
 
 group :development, :test do
   gem "byebug", platform: :mri
