--- a/ecommerce/Gemfile
+++ b/ecommerce/Gemfile
@@ -19,6 +19,9 @@ gem "mini_magick", "~> 4.3"
 gem "ransack"
 gem "simple_form"
 gem "social-share-button"
+gem "omniauth"
+gem "omniauth-facebook"
+gem "omniauth-google-oauth2"
 
 group :development, :test do
   gem "byebug", platform: :mri
